--- a/webapp/view/post-card.html
+++ b/webapp/view/post-card.html
@@ -4,13 +4,15 @@
             {{post.title}}
         </h1>
         <p class="doca-text--normal doca-text--extra-small doca-mb-4">
-            Publicado por {{post.user.name}} | {{post.available_at | date:'dd/MM/yyyy HH:mm'}}
+            Publicado por {{post.user.name}} | {{post.available_at | date:'dd/MM/yyyy'}} às {{post.available_at | date:'HH:mm'}}
         </p>
         <p class="doca-card__subtitle doca-mb-8">
             {{post.summary | SummaryFilter:200}}
         </p>
         <span>
-            <i class="doca-icon doca-icon__thumbs-up doca-icon--solid"></i> {{post.likes}}
+            <i
+            ng-class="{'doca-icon--solid doca-text--danger': post.is_liked}"
+            class="doca-icon doca-icon__heart"></i> {{post.likes}}
         </span>
     </div>
     <div class="options-group" ng-if="post.allowEdit && post.allowRemove">
