--- a/webapp/view/app-header.html
+++ b/webapp/view/app-header.html
@@ -1,6 +1,14 @@
 <div class="doca-page__header doca-mt-2">
     <div class="doca-page__header__content doca-flex doca-justify-between doca-flex-row doca-items-center">
-        <h1 class="doca-page__header__title doca-text--semibold">Medium Amigo</h1>
+        <h1
+        class="doca-page__header__title doca-text--semibold doca-flex doca-justify-center doca-items-center"
+        style="cursor: pointer;"
+        ng-click="goTo('')">
+            <img src="assets/amigo.svg" class="doca-mr-1" width="40" alt="Amigo Logo">
+            <span>
+                Medium
+            </span>
+        </h1>
         <div class="doca-form__field" style="width: 28%;">
             <div class="doca-form-control__icon-container doca-form-control__icon-container--left">
                 <i class="doca-icon doca-icon__search" />
