--- a/webapp/view/post-card.html
+++ b/webapp/view/post-card.html
@@ -1,4 +1,4 @@
-<div class="doca-card doca-my-5 doca-mx-auto post-card" ng-mouseleave="setShowOptions(null)">
+<div ng-click="goTo('#/post/' + post.id)" class="doca-card doca-my-5 doca-mx-auto post-card" ng-mouseleave="setShowOptions(null)">
     <div class="doca-card__content">
         <h1 class="doca-card__title doca-text--extra-large doca-text--semibold doca-mb-1">
             {{post.title}}
