--- a/webapp/view/app-header.html
+++ b/webapp/view/app-header.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div ng-if="!loggedUser" class="doca-button-group">
-            <button ng-click="login('Gabriel Rodrigues')">
+            <button ng-click="openLoginModal()">
                 Login
             </button>
             <button>
