--- a/webapp/view/app-header.html
+++ b/webapp/view/app-header.html
@@ -19,7 +19,7 @@
             <button ng-click="openLoginModal()">
                 Login
             </button>
-            <button>
+            <button ng-click="openSignupModal()">
                 Cadastrar
             </button>
         </div>
