--- a/webapp/view/post.html
+++ b/webapp/view/post.html
@@ -19,7 +19,7 @@
         <button>
           Editar
         </button>
-        <button>
+        <button ng-click="openDeleteModal(post.id, false, $event)">
           Excluir
         </button>
       </div>
