--- a/webapp/view/post-card.html
+++ b/webapp/view/post-card.html
@@ -9,7 +9,7 @@
         <p class="doca-card__subtitle doca-mb-8">
             {{post.summary | SummaryFilter:200}}
         </p>
-        <span>
+        <span ng-click="handleLike(post, $event)" class="doca-py-3">
             <i
             ng-class="{'doca-icon--solid doca-text--danger': post.is_liked}"
             class="doca-icon doca-icon__heart"></i> {{post.likes}}
