--- a/webapp/view/modal-signup.html
+++ b/webapp/view/modal-signup.html
@@ -15,7 +15,7 @@
             <div class="doca-form__field doca-form__field--required doca-mb-5">
                 <label class="doca-form__label">Nome</label>
                 <div class="doca-form-control__icon-container doca-form-control__icon-container--left">
-                    <i class="doca-icon doca-icon__at"></i>
+                    <i class="doca-icon doca-icon__user"></i>
                     <input name="name" class="doca-form-control" ng-required="true" type="text"
                         ng-model="newUser.name" />
                 </div>
